name:                connmatch
version:             0.1.0.0
license:             MIT
author:              Vladimir Kirillov
maintainer:          vladimir.kirillov@zalora.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable connmatch
  main-is:             connmatch.hs
  build-depends:       base >=4.6 && <4.7
                     , unix
                     , bytestring
                     , containers
                     , directory
  default-language:    Haskell2010
